[package]
name = "akaibu"
version = "0.1.0"
authors = ["forlos <forlos@disroot.org>"]
edition = "2018"

[dependencies]
bytes = { version = "0.5", default_features = false }
structopt = { version = "0.3", default_features = false }
read_input = "0.8"
colored = "2"
crc-any = "2.3"
rust-embed= { version = "5.6", default_features = false, features = ["compression"] }
anyhow = "1.0"
thiserror = "1.0"
encoding_rs = { version = "0.8", default_features = false, features = ["fast-kanji-encode"] }
scroll = { version = "0.10", features = ["derive"] }
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", default_features = false, features = ["derive"] }
serde_json = { version = "1.0", default_features = false, features = ["std"] }
rayon = { version = "1.3", default_features = false}
indicatif = { version = "0.15.0" , features = ["with_rayon"]}
sha1 = "0.6"
