[package]
name = "akaibu"
version = "0.1.17-alpha.0"
authors = ["forlos <forlos@disroot.org>"]
edition = "2018"
publish = false

[dependencies]
# IO
bytes = { version = "1.0", default_features = false }
scroll = { version = "0.10", features = ["derive"] }
positioned-io-preview = "0.3.3"

# Serialization
serde = { version = "1.0", default_features = false, features = ["derive"] }
serde_json = { version = "1.0", default_features = false, features = ["std"] }

# Parallelization
rayon = { version = "1.3", default_features = false }

# Encoding
encoding_rs = { version = "0.8", default_features = false, features = ["fast-kanji-encode"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Crypto
sha1 = "0.6"
crc-any = "2.3"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
camellia-rs = "0.2"

# Resources
tlg_rs = { git = "https://github.com/Forlos/tlg_rs", branch = "master" }
image = { version = "0.23", default-features = false, features = ["png"] }
libwebp-image = { version = "0.2.0", default_features = false, features = ["libwebp-1_1"] }
rust-embed= { version = "5.6", default_features = false, features = ["compression"] }

# Other
dyn-clone = "1.0.2"
itertools = "0.10"
once_cell = "1.4.1"
enum-iterator = "0.6"

[build-dependencies]
libwebp = { version = "0.1.0", default_features = false, features = ["1_1", "static"] }

[package.metadata.release]
tag-name = "{{version}}"
tag-message = "Release {{tag_name}}"
