[package]
name = "akaibu_gui"
version = "0.1.2-alpha.0"
authors = ["forlos <forlos@disroot.org>"]
edition = "2018"
publish = false

[dependencies.akaibu]
path = "../akaibu"

[dependencies]
iced = { version = "0.1.1", features = ["image"] }
bytesize = "1.0.1"
structopt = { version = "0.3", default_features = false }
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.9"
rust-embed= { version = "5.6", default_features = false, features = ["compression"] }
rayon = { version = "1.3", default_features = false}
image = { version = "0.23", default-features = false, features = ["png", "ico", "bmp", "webp"] }
fuzzy-matcher = "0.3"

[package.metadata.release]
disable-tag = true
